Purge all the dependencies of CatalogTracker from hbase-client and move it to hbase-server
Summary: Narrow the dependency for zk so finally we can replace the zookeeper registry with a rest client

Test Plan: UT

Reviewers: zhangguanghao1, huzheng, tianjingyun, wuguoquan, meiyi

Reviewed By: zhangguanghao1

Subscribers: hbase-help

Maniphest Tasks: T10154

Differential Revision: https://phabricator.d.xiaomi.net/D74049